Fixed positioning of text and icons within buttons (icons were cut off on bottom and text was not vertically aligned)

--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -710,6 +710,7 @@ table.basic > tbody > tr > td.empty-label
 .thirty-two
 {
   padding-left: 37px;
+  padding-top: .8em;
   background: no-repeat 0 5px;
   min-height: 42px;
 }
@@ -717,6 +718,7 @@ table.basic > tbody > tr > td.empty-label
 .twenty
 {
   padding-left: 25px;
+  padding-top: .4em;
   background: no-repeat;
   min-height: 26px;
 }
@@ -724,7 +726,8 @@ table.basic > tbody > tr > td.empty-label
 .sixteen
 {
   padding-left: 21px;
-  background: no-repeat 0 5px;
+  padding-top: 3px;
+  background: no-repeat 0 2px;
   min-height: 18px;
 }
 
@@ -1011,6 +1014,7 @@ a.button:link, a.button:visited
 .button .icon
 {
   display: inline-block;
+  box-sizing: border-box;
 }
 
 .pager .button
