--- a/site/resources/styles/core/medium.css
+++ b/site/resources/styles/core/medium.css
@@ -73,3 +73,18 @@ h5,
 {
 	font-size: 9pt;
 }
+
+.icon.sixteen
+{
+  padding-top: 1px;
+}
+
+.icon.twenty
+{
+  padding-top: .3em;
+}
+
+.icon.thirty-two
+{
+  padding-top: .8em;
+}
